tests/invalid/Final_Invalid_4.whiley
function f(final int x) -> (int r):
    //
    if x >= 0:
        x = x + 1
    //
    return x